profile pic upload done

--- a/src/app/layouts/app-header/app-header.component.html
+++ b/src/app/layouts/app-header/app-header.component.html
@@ -3,7 +3,7 @@
     <a class="link" routerLink="/index">
         <span class="brand">
             <img class="" src="./assets/img/admin-avatar.png"/>
-            Admin
+            {{userDetails.name}}
             <!-- <span class="brand-tip">CAST</span> -->
         </span>
         <!-- <span class="brand-mini">
@@ -158,10 +158,10 @@
         <li class="dropdown dropdown-user">
             <a class="nav-link dropdown-toggle link" data-toggle="dropdown">
                 <img src="./assets/img/admin-avatar.png" />
-                <span></span>Admin<i class="fa fa-angle-down m-l-5"></i></a>
+                <span></span>{{userDetails.name}}<i class="fa fa-angle-down m-l-5"></i></a>
             <ul class="dropdown-menu dropdown-menu-right">
-                <a class="dropdown-item" href="profile.html"><i class="fa fa-user"></i>Profile</a>
-                <a class="dropdown-item" href="profile.html"><i class="fa fa-cog"></i>Settings</a>
+                <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Profile</a>
+                <a class="dropdown-item" href="#"><i class="fa fa-cog"></i>Settings</a>
                 <!-- <a class="dropdown-item" href="javascript:;"><i class="fa fa-support"></i>Support</a> -->
                 <li class="dropdown-divider"></li>
                 <a class="dropdown-item" (click)="userLogout()"><i class="fa fa-power-off"></i>Logout</a>
