--- a/src/app/pages/students/student-list/student-list.component.html
+++ b/src/app/pages/students/student-list/student-list.component.html
@@ -101,8 +101,8 @@
                 <ngx-datatable-column name="Action" [width]="80">
                     <ng-template let-row="row" ngx-datatable-cell-template>
                         <i class="fa fa-eye text-primary" aria-hidden="true"></i>
-                        <i class="fa fa-pencil-square-o text-success" aria-hidden="true"></i>
-                        <i class="fa fa-trash-o text-danger" aria-hidden="true"></i> 
+                        <i class="fa fa-pencil-square-o text-success ml-1" aria-hidden="true"></i>
+                        <i class="fa fa-trash-o text-danger ml-1" aria-hidden="true"></i> 
                     </ng-template>
                 </ngx-datatable-column>
               </ngx-datatable>
