student detail page done

--- a/src/app/pages/students/add-student/add-student.component.html
+++ b/src/app/pages/students/add-student/add-student.component.html
@@ -5,12 +5,12 @@
         <div class="ibox">        
             <div class="ibox-head">
               <div class="ibox-title">Add Student Form</div>
-              <div class="ibox-tools">
+              <!-- <div class="ibox-tools">
                 <a class="ibox-collapse">
                   <i class="fa fa-refresh mr-1 text-success refresh-icon" aria-hidden="true"></i>
                   <i class="fa fa-times text-danger close-icon" aria-hidden="true"></i>
                 </a>
-              </div>
+              </div> -->
             </div>
   
           <div class="ibox-body">
