--- a/src/app/pages/students/add-student/add-student.component.css
+++ b/src/app/pages/students/add-student/add-student.component.css
@@ -5,3 +5,41 @@
 .close-icon {
     font-size: 10.8px;
 }
+
+/* .student-info .form-control{padding: 1rem 0rem !important; font-size: 1rem; border-top: 0px; border-left: 0px; border-right: 0px; border-bottom: 2px solid #ced4da; }
+.student-info .form-control:focus {color: #000000; background-color: #fff; border-color:var(--red-color); outline: 0; box-shadow: 0 0 0 0rem rgba(0, 123, 255, 0.25); }
+.form-label-group > label{font-size: 1rem; padding: 0px !important; position: absolute; top:12px; }
+.form-label-group{position: relative;}
+.student-info .form-control:focus label{ font-size: 75%;
+    transform: translate3d(0, -100%, 0);
+    opacity: 1;}
+   */
+
+.form-group-label{
+    position: relative;
+}
+.form-group-label label{
+    position: absolute;
+    visibility: hidden;
+}
+.form-group-label .form-control{
+    border-left: 0px;
+    border-right: 0px;
+    border-top: 0px;
+}
+.form-group-label .form-control:focus label{
+    position: relative !important;
+    font-size: 50% !important;
+    opacity: 1 !important;
+    top: -20px;
+    transform: translate3d(0, -100%, 0);
+    visibility: visible;
+}
+
+.mdl-textfield__label:after{
+    bottom: 14px !important;
+}
+.mdl-textfield__label{
+    color: rgba(0, 0, 0, 1) !important;
+    font-size: 14px;
+}
