--- a/src/app/pages/students/student-list/student-list.component.css
+++ b/src/app/pages/students/student-list/student-list.component.css
@@ -5,3 +5,51 @@
 .close-icon {
     font-size: 10.8px;
 }
+
+
+.styled-checkbox {
+    position: absolute;
+    opacity: 0;
+  }
+  .styled-checkbox + label {
+    position: relative;
+    cursor: pointer;
+    padding: 0;
+  }
+  .styled-checkbox + label:before {
+    content: "";
+    margin-right: 10px;
+    display: inline-block;
+    vertical-align: text-top;
+    width: 18px;
+    height: 18px;
+    background: #f1f1f1;
+  }
+  .styled-checkbox:hover + label:before {
+    background: #126cd4;
+  }
+  .styled-checkbox:focus + label:before {
+    /* box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.12); */
+  }
+  .styled-checkbox:checked + label:before {
+    background: #126cd4;
+  }
+  .styled-checkbox:disabled + label {
+    color: #b8b8b8;
+    cursor: auto;
+  }
+  .styled-checkbox:disabled + label:before {
+    box-shadow: none;
+    background: #ddd;
+  }
+  .styled-checkbox:checked + label:after {
+    content: "";
+    position: absolute;
+    left: 4px;
+    top: 9px;
+    background: white;
+    width: 2px;
+    height: 2px;
+    box-shadow: 2px 0 0 white, 4px 0 0 white, 4px -2px 0 white, 4px -4px 0 white, 4px -6px 0 white, 4px -8px 0 white;
+    transform: rotate(45deg);
+  }
