student list and student details page done

--- a/src/app/layouts/app-header/app-header.component.html
+++ b/src/app/layouts/app-header/app-header.component.html
@@ -1,6 +1,6 @@
 
 <div class="page-brand">
-    <a class="link" routerLink="/index">
+    <a class="link" routerLink="/dashboard">
         <span class="brand">
             <img class="" src="./assets/img/admin-avatar.png"/>
             {{userDetails.name}}
