--- a/src/app/layouts/app-footer/app-footer.component.html
+++ b/src/app/layouts/app-footer/app-footer.component.html
@@ -1,2 +1,2 @@
-<div class="font-13">2018 © <b>School Management System</b> - All rights reserved.</div>
+<div class="font-13">2018 © <b>School Management System</b> - All rights reserved. Designed By WIS.</div>
 <!-- <a class="px-4" href="http://themeforest.net/item/adminca-responsive-bootstrap-4-3-angular-4-admin-dashboard-template/20912589" target="_blank">BUY PREMIUM</a> -->
