--- a/src/app/pages/students/add-student/add-student.component.html
+++ b/src/app/pages/students/add-student/add-student.component.html
@@ -113,7 +113,7 @@
                     <div class="col-sm-3">
                         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                             <select class="mdl-textfield__input" name="nationality" formControlName="nationality">
-                                    <option value="indian">Indian</option>
+                                <option value="indian">Indian</option>
                             </select>
                         <label class="mdl-textfield__label" for="sample3">Nationality</label>
                         </div>
@@ -121,7 +121,13 @@
 
                     <div class="col-sm-12">
                             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                            <input class="mdl-textfield__input" type="file" id="sample3" name="studentProfPicEncoded" formControlName="studentProfPicEncoded" (change)="onSelectFile($event)" accept="image/*">
+                                <!-- <input class="mdl-textfield__input" type="file" id="sample3" name="studentProfPicEncoded" formControlName="studentProfPicEncoded" (change)="onSelectFile($event)" accept="image/*"> -->
+
+                                <div class="custom-file">
+                                    <input type="file" class="custom-file-input" name="studentProfPicEncoded" formControlName="studentProfPicEncoded" (change)="onSelectFile($event)" accept="image/*">
+                                    <label class="custom-file-label">Choose file</label>
+                                </div>                                      
+                                <label class="mdl-textfield__label">Upload Profile Picture</label>
                             </div>
                     </div>
 
