--- a/src/app/layouts/app-header/app-header.component.html
+++ b/src/app/layouts/app-header/app-header.component.html
@@ -1,139 +1,142 @@
-
 <div class="page-brand">
-    <a class="link" routerLink="/dashboard">
-        <span class="brand">
-            <img class="" src="./assets/img/admin-avatar.png"/>
-            {{userDetails.name}}
-            <!-- <span class="brand-tip">CAST</span> -->
-        </span>
-        <!-- <span class="brand-mini">
+  <a class="link" routerLink="/dashboard">
+    <span class="brand">
+      <img class="" src="./assets/img/admin-avatar.png" />
+      {{userDetails.name}}
+      <!-- <span class="brand-tip">CAST</span> -->
+    </span>
+    <!-- <span class="brand-mini">
             <img src="./assets/img/admin-avatar.png"/>
         </span> -->
-    </a>
+  </a>
 
-    <a class="nav-link sidebar-toggler js-sidebar-toggler float-right">
-        <i class="ti-menu"></i>
-    </a>
+  <a class="nav-link sidebar-toggler js-sidebar-toggler float-right">
+    <i class="ti-menu"></i>
+  </a>
 </div>
 
 <div class="flexbox flex-1">
-    <!-- START TOP-LEFT TOOLBAR-->
-    <ul class="nav navbar-toolbar">
-        <li>
-            <!-- <a class="nav-link sidebar-toggler js-sidebar-toggler">
+  <!-- START TOP-LEFT TOOLBAR-->
+  <ul class="nav navbar-toolbar">
+    <li>
+      <!-- <a class="nav-link sidebar-toggler js-sidebar-toggler">
                 <i class="ti-menu"></i>
             </a> -->
-        </li>
-        <li>
-            <h5 class="h5 pt-2 ml-4">School Management System</h5>
-        </li>
-    </ul>
-    <!-- END TOP-LEFT TOOLBAR-->
-    <!-- START TOP-RIGHT TOOLBAR-->
-    <ul class="nav navbar-toolbar">
-        <li>
-            <form class="navbar-search" action="javascript:;">
-                <div class="rel">
-                    <span class="search-icon"><i class="ti-search"></i></span>
-                    <input class="form-control" placeholder="Search here...">
-                </div>
-            </form>
-        </li>
-        <li>
+    </li>
+    <li>
+      <h5 class="h5 pt-2 ml-4">
+        <i class="fa fa-graduation-cap h3" aria-hidden="true"></i>
+        School Management System</h5>
+    </li>
+  </ul>
+  <!-- END TOP-LEFT TOOLBAR-->
+  <!-- START TOP-RIGHT TOOLBAR-->
+  <ul class="nav navbar-toolbar">
+    <li>
+      <form class="navbar-search" action="javascript:;">
+        <div class="rel">
+          <span class="search-icon"><i class="ti-search"></i></span>
+          <input class="form-control" placeholder="Search here...">
+        </div>
+      </form>
+    </li>
+    <li>
 
+    </li>
+    <li class="dropdown dropdown-inbox">
+      <a class="nav-link dropdown-toggle" data-toggle="dropdown">
+        <i class="fa fa-envelope-o"></i>
+        <span class="badge badge-primary envelope-badge">9</span>
+      </a>
+      <ul class="dropdown-menu dropdown-menu-right dropdown-menu-media">
+        <li class="dropdown-menu-header">
+          <div>
+            <span><strong>9 New</strong> Messages</span>
+            <a class="pull-right" href="mailbox.html">view all</a>
+          </div>
         </li>
-        <li class="dropdown dropdown-inbox">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown">
-                <i class="fa fa-envelope-o"></i>
-                <span class="badge badge-primary envelope-badge">9</span>
+        <li class="list-group list-group-divider scroller" data-height="240px" data-color="#71808f">
+          <div>
+            <a class="list-group-item">
+              <div class="media">
+                <div class="media-img">
+                  <img src="./assets/img/admin-avatar.png" />
+                </div>
+                <div class="media-body">
+                  <div class="font-strong"> </div>Jeanne Gonzalez<small class="text-muted float-right">Just now</small>
+                  <div class="font-13">Your proposal interested me.</div>
+                </div>
+              </div>
             </a>
-            <ul class="dropdown-menu dropdown-menu-right dropdown-menu-media">
-                <li class="dropdown-menu-header">
-                    <div>
-                        <span><strong>9 New</strong> Messages</span>
-                        <a class="pull-right" href="mailbox.html">view all</a>
-                    </div>
-                </li>
-                <li class="list-group list-group-divider scroller" data-height="240px" data-color="#71808f">
-                    <div>
-                        <a class="list-group-item">
-                            <div class="media">
-                                <div class="media-img">
-                                    <img src="./assets/img/admin-avatar.png"/>
-                                </div>
-                                <div class="media-body">
-                                    <div class="font-strong"> </div>Jeanne Gonzalez<small class="text-muted float-right">Just now</small>
-                                    <div class="font-13">Your proposal interested me.</div>
-                                </div>
-                            </div>
-                        </a>
-                        <a class="list-group-item">
-                            <div class="media">
-                                <div class="media-img">
-                                    <img src="./assets/img/admin-avatar.png"/>
-                                </div>
-                                <div class="media-body">
-                                    <div class="font-strong"></div>Becky Brooks<small class="text-muted float-right">18 mins</small>
-                                    <div class="font-13">Lorem Ipsum is simply.</div>
-                                </div>
-                            </div>
-                        </a>
-                        <a class="list-group-item">
-                            <div class="media">
-                                <div class="media-img">
-                                    <img src="./assets/img/admin-avatar.png"/>
-                                </div>
-                                <div class="media-body">
-                                    <div class="font-strong"></div>Frank Cruz<small class="text-muted float-right">18 mins</small>
-                                    <div class="font-13">Lorem Ipsum is simply.</div>
-                                </div>
-                            </div>
-                        </a>
-                        <a class="list-group-item">
-                            <div class="media">
-                                <div class="media-img">
-                                    <img src="./assets/img/admin-avatar.png"/>
-                                </div>
-                                <div class="media-body">
-                                    <div class="font-strong"></div>Rose Pearson<small class="text-muted float-right">3 hrs</small>
-                                    <div class="font-13">Lorem Ipsum is simply.</div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </li>
-            </ul>
+            <a class="list-group-item">
+              <div class="media">
+                <div class="media-img">
+                  <img src="./assets/img/admin-avatar.png" />
+                </div>
+                <div class="media-body">
+                  <div class="font-strong"></div>Becky Brooks<small class="text-muted float-right">18 mins</small>
+                  <div class="font-13">Lorem Ipsum is simply.</div>
+                </div>
+              </div>
+            </a>
+            <a class="list-group-item">
+              <div class="media">
+                <div class="media-img">
+                  <img src="./assets/img/admin-avatar.png" />
+                </div>
+                <div class="media-body">
+                  <div class="font-strong"></div>Frank Cruz<small class="text-muted float-right">18 mins</small>
+                  <div class="font-13">Lorem Ipsum is simply.</div>
+                </div>
+              </div>
+            </a>
+            <a class="list-group-item">
+              <div class="media">
+                <div class="media-img">
+                  <img src="./assets/img/admin-avatar.png" />
+                </div>
+                <div class="media-body">
+                  <div class="font-strong"></div>Rose Pearson<small class="text-muted float-right">3 hrs</small>
+                  <div class="font-13">Lorem Ipsum is simply.</div>
+                </div>
+              </div>
+            </a>
+          </div>
         </li>
-        <li class="dropdown dropdown-notification">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell-o rel"><span class="notify-signal"></span></i></a>
-            <ul class="dropdown-menu dropdown-menu-right dropdown-menu-media">
-                <li class="dropdown-menu-header">
-                    <div>
-                        <span><strong>5 New</strong> Notifications</span>
-                        <a class="pull-right" href="javascript:;">view all</a>
-                    </div>
-                </li>
-                <li class="list-group list-group-divider scroller" data-height="120px" data-color="#71808f">
-                    <div>
-                        <a class="list-group-item">
-                            <div class="media">
-                                <div class="media-img">
-                                    <span class="badge badge-success badge-big"><i class="fa fa-check"></i></span>
-                                </div>
-                                <div class="media-body">
-                                    <div class="font-13">4 task compiled</div><small class="text-muted">22 mins</small></div>
-                            </div>
-                        </a>
-                        <a class="list-group-item">
-                            <div class="media">
-                                <div class="media-img">
-                                    <span class="badge badge-default badge-big"><i class="fa fa-shopping-basket"></i></span>
-                                </div>
-                                <div class="media-body">
-                                    <div class="font-13">You have 12 new orders</div><small class="text-muted">40 mins</small></div>
-                            </div>
-                        </a>
-                        <!-- <a class="list-group-item">
+      </ul>
+    </li>
+    <li class="dropdown dropdown-notification">
+      <a class="nav-link dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell-o rel"><span class="notify-signal"></span></i></a>
+      <ul class="dropdown-menu dropdown-menu-right dropdown-menu-media">
+        <li class="dropdown-menu-header">
+          <div>
+            <span><strong>5 New</strong> Notifications</span>
+            <a class="pull-right" href="javascript:;">view all</a>
+          </div>
+        </li>
+        <li class="list-group list-group-divider scroller" data-height="120px" data-color="#71808f">
+          <div>
+            <a class="list-group-item">
+              <div class="media">
+                <div class="media-img">
+                  <span class="badge badge-success badge-big"><i class="fa fa-check"></i></span>
+                </div>
+                <div class="media-body">
+                  <div class="font-13">4 task compiled</div><small class="text-muted">22 mins</small>
+                </div>
+              </div>
+            </a>
+            <a class="list-group-item">
+              <div class="media">
+                <div class="media-img">
+                  <span class="badge badge-default badge-big"><i class="fa fa-shopping-basket"></i></span>
+                </div>
+                <div class="media-body">
+                  <div class="font-13">You have 12 new orders</div><small class="text-muted">40 mins</small>
+                </div>
+              </div>
+            </a>
+            <!-- <a class="list-group-item">
                             <div class="media">
                                 <div class="media-img">
                                     <span class="badge badge-danger badge-big"><i class="fa fa-bolt"></i></span>
@@ -142,7 +145,7 @@
                                     <div class="font-13">Server #7 rebooted</div><small class="text-muted">2 hrs</small></div>
                             </div>
                         </a> -->
-                        <!-- <a class="list-group-item">
+            <!-- <a class="list-group-item">
                             <div class="media">
                                 <div class="media-img">
                                     <span class="badge badge-success badge-big"><i class="fa fa-user"></i></span>
@@ -151,22 +154,22 @@
                                     <div class="font-13">New user registered</div><small class="text-muted">2 hrs</small></div>
                             </div>
                         </a> -->
-                    </div>
-                </li>
-            </ul>
+          </div>
         </li>
-        <li class="dropdown dropdown-user">
-            <a class="nav-link dropdown-toggle link" data-toggle="dropdown">
-                <img src="./assets/img/admin-avatar.png" />
-                <span></span>{{userDetails.name}}<i class="fa fa-angle-down m-l-5"></i></a>
-            <ul class="dropdown-menu dropdown-menu-right">
-                <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Profile</a>
-                <a class="dropdown-item" href="#"><i class="fa fa-cog"></i>Settings</a>
-                <!-- <a class="dropdown-item" href="javascript:;"><i class="fa fa-support"></i>Support</a> -->
-                <li class="dropdown-divider"></li>
-                <a class="dropdown-item" (click)="userLogout()"><i class="fa fa-power-off"></i>Logout</a>
-            </ul>
-        </li>
-    </ul>
-    <!-- END TOP-RIGHT TOOLBAR-->
+      </ul>
+    </li>
+    <li class="dropdown dropdown-user">
+      <a class="nav-link dropdown-toggle link" data-toggle="dropdown">
+        <img src="./assets/img/admin-avatar.png" />
+        <span></span>{{userDetails.name}}<i class="fa fa-angle-down m-l-5"></i></a>
+      <ul class="dropdown-menu dropdown-menu-right">
+        <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Profile</a>
+        <a class="dropdown-item" href="#"><i class="fa fa-cog"></i>Settings</a>
+        <!-- <a class="dropdown-item" href="javascript:;"><i class="fa fa-support"></i>Support</a> -->
+        <li class="dropdown-divider"></li>
+        <a class="dropdown-item" (click)="userLogout()"><i class="fa fa-power-off"></i>Logout</a>
+      </ul>
+    </li>
+  </ul>
+  <!-- END TOP-RIGHT TOOLBAR-->
 </div>
