--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -1,175 +1,182 @@
 <div id="sidebar-collapse">
-    <ul class="nav nav-tabs nav-justified" role="tablist">
+  <ul class="nav nav-tabs nav-justified" role="tablist">
     <li class="nav-item">
-        <a class="nav-link active" data-toggle="tab" href="#home"> <i class="fa fa-bookmark"></i> Tab One</a>
+      <a class="nav-link active" data-toggle="tab" href="#home"> <i class="fa fa-bookmark"></i> Tab One</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#menu1"> <i class="fa fa-bookmark"></i> Tab Two</a>
+      <a class="nav-link" data-toggle="tab" href="#menu1"> <i class="fa fa-bookmark"></i> Tab Two</a>
     </li>
-    </ul>
+  </ul>
 
-    <div class="tab-content">
+  <div class="tab-content">
     <div id="home" class="tab-pane active"><br>
-        <ul class="side-menu metismenu">
-                <!-- <li>
+      <ul class="side-menu metismenu">
+        <!-- <li>
                     <a routerLinkActive="active" routerLink="/index"><i class="sidebar-item-icon fa fa-th-large"></i>
                         <span class="nav-label">Dashboard</span>
                     </a>
                 </li> -->
-        
-                <!-- <li class="heading">FEATURES</li> -->
-                <li routerLinkActive="active">
-                    <a href="javascript:;" aria-expanded="false">
-                        <i class="sidebar-item-icon ti-save"></i>
-                        <span class="nav-label">Enrollment</span>
-                        <i class="fa fa-angle-right arrow"></i>
-                    </a>
-                    <ul class="nav-2-level collapse" routerLinkActive="in" aria-expanded="false">
-                        <li>
-                            <a [routerLink]="['/students/add']" routerLinkActive="active">
-                                <span class="submenu-arrow"><i class="ti-angle-right"></i></span>
-                                Student Admission
-                            </a>
-                        </li>
-                        <li>
-                            <a routerLink="" routerLinkActive="active">
-                                <span class="submenu-arrow"><i class="ti-angle-right"></i></span>
-                                Bulk Upload</a>
-                        </li>
-                        <li>
-                            <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>User Registration</a>
-                        </li>
-                        <li>
-                            <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Admission Enquery</a>
-                        </li>
-                    </ul>
-                </li>
-                <li routerLinkActive="active">
-                    <a href="javascript:;"><i class="sidebar-item-icon fa fa-edit"></i>
-                        <span class="nav-label">Fee Management</span><i class="fa fa-angle-right arrow"></i>
-                    </a>
-                </li>
-                <li routerLinkActive="active">
-                    <a href="javascript:;"><i class="sidebar-item-icon fa fa-table"></i>
-                        <span class="nav-label">Student Management</span><i class="fa fa-angle-right arrow"></i></a>
-                        <ul class="nav-2-level" routerLinkActive="in">
-                            <li>
-                                <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Update Student</a>
-                            </li>
-                            <li>
-                                <a [routerLink]="['/students/list']" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>View Student</a>
-                            </li>
-                            <li>
-                                <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Roll No Assign</a>
-                            </li>
-                            <li>
-                                <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Attandance Report</a>
-                            </li>
-                            <li>
-                                <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>View Time Table</a>
-                            </li>
-                        </ul>
-                </li>
-                <li routerLinkActive="active">
-                    <a href="javascript:;"><i class="sidebar-item-icon fa fa-bar-chart"></i>
-                        <span class="nav-label">Teacher Activities</span><i class="fa fa-angle-right arrow"></i>
-                    </a>
-                </li>
-                <li routerLinkActive="active">
-                    <a href="javascript:;"><i class="sidebar-item-icon fa fa-map"></i>
-                        <span class="nav-label">Examination Management</span><i class="fa fa-angle-right arrow"></i></a>
-                </li>
-                <li>
-                    <a routerLink="/ui/icons" routerLinkActive="active"><i class="sidebar-item-icon fa fa-smile-o"></i>
-                        <span class="nav-label">User Managements</span>
-                    </a>
-                </li>
-                <!-- <li class="heading">PAGES</li> -->
-                <li routerLinkActive="active">
-                    <a href="javascript:;"><i class="sidebar-item-icon fa fa-envelope"></i>
-                        <span class="nav-label">Notifications & Events</span><i class="fa fa-angle-right arrow"></i>
-                    </a>
-                </li>
-                <li>
-                    <a routerLink="/calendar" routerLinkActive="active"><i class="sidebar-item-icon fa fa-calendar"></i>
-                        <span class="nav-label">Transport Management</span>
-                    </a>
-                </li>
-                <li routerLinkActive="active">
-                    <a href="javascript:;"><i class="sidebar-item-icon fa fa-file-text"></i>
-                        <span class="nav-label">Finance Management</span><i class="fa fa-angle-right arrow"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript:;"><i class="sidebar-item-icon fa fa-sitemap"></i>
-                        <span class="nav-label">Leave Management</span><i class="fa fa-angle-right arrow"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript:;"><i class="sidebar-item-icon fa fa-sitemap"></i>
-                        <span class="nav-label">Certificates Management</span><i class="fa fa-angle-right arrow"></i>
-                    </a>
-                </li>
-            </ul>
+
+        <!-- <li class="heading">FEATURES</li> -->
+        <li routerLinkActive="active">
+          <a href="javascript:;">
+            <i class="sidebar-item-icon ti-save"></i>
+            <span class="nav-label">Enrollment</span>
+            <i class="fa fa-angle-right arrow"></i>
+          </a>
+          <ul class="nav-2-level collapse" routerLinkActive="in">
+            <li>
+              <a [routerLink]="['/students/add']" routerLinkActive="active">
+                <span class="submenu-arrow"><i class="ti-angle-right"></i></span>
+                Student Admission
+              </a>
+            </li>
+            <li>
+              <a routerLink="" routerLinkActive="active">
+                <span class="submenu-arrow"><i class="ti-angle-right"></i></span>
+                Bulk Upload</a>
+            </li>
+            <li>
+              <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>User
+                Registration</a>
+            </li>
+            <li>
+              <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Admission
+                Enquery</a>
+            </li>
+          </ul>
+        </li>
+        <li routerLinkActive="active">
+          <a href="javascript:;"><i class="sidebar-item-icon fa fa-edit"></i>
+            <span class="nav-label">Fee Management</span><i class="fa fa-angle-right arrow"></i>
+          </a>
+        </li>
+        <li routerLinkActive="active">
+          <a href="javascript:;"><i class="sidebar-item-icon fa fa-table"></i>
+            <span class="nav-label">Student Management</span><i class="fa fa-angle-right arrow"></i></a>
+          <ul class="nav-2-level" routerLinkActive="in">
+            <li>
+              <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Update
+                Student</a>
+            </li>
+            <li>
+              <a [routerLink]="['/students/list']" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>View
+                Student</a>
+            </li>
+            <li>
+              <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Roll
+                No Assign</a>
+            </li>
+            <li>
+              <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Attandance
+                Report</a>
+            </li>
+            <li>
+              <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>View
+                Time Table</a>
+            </li>
+          </ul>
+        </li>
+        <li routerLinkActive="active">
+          <a href="javascript:;"><i class="sidebar-item-icon fa fa-bar-chart"></i>
+            <span class="nav-label">Teacher Activities</span><i class="fa fa-angle-right arrow"></i>
+          </a>
+        </li>
+        <li routerLinkActive="active">
+          <a href="javascript:;"><i class="sidebar-item-icon fa fa-map"></i>
+            <span class="nav-label">Examination Management</span><i class="fa fa-angle-right arrow"></i></a>
+        </li>
+        <li>
+          <a routerLink="/ui/icons" routerLinkActive="active"><i class="sidebar-item-icon fa fa-smile-o"></i>
+            <span class="nav-label">User Managements</span>
+          </a>
+        </li>
+        <!-- <li class="heading">PAGES</li> -->
+        <li routerLinkActive="active">
+          <a href="javascript:;"><i class="sidebar-item-icon fa fa-envelope"></i>
+            <span class="nav-label">Notifications & Events</span><i class="fa fa-angle-right arrow"></i>
+          </a>
+        </li>
+        <li>
+          <a routerLink="/calendar" routerLinkActive="active"><i class="sidebar-item-icon fa fa-calendar"></i>
+            <span class="nav-label">Transport Management</span>
+          </a>
+        </li>
+        <li routerLinkActive="active">
+          <a href="javascript:;"><i class="sidebar-item-icon fa fa-file-text"></i>
+            <span class="nav-label">Finance Management</span><i class="fa fa-angle-right arrow"></i>
+          </a>
+        </li>
+        <li>
+          <a href="javascript:;"><i class="sidebar-item-icon fa fa-sitemap"></i>
+            <span class="nav-label">Leave Management</span><i class="fa fa-angle-right arrow"></i>
+          </a>
+        </li>
+        <li>
+          <a href="javascript:;"><i class="sidebar-item-icon fa fa-sitemap"></i>
+            <span class="nav-label">Certificates Management</span><i class="fa fa-angle-right arrow"></i>
+          </a>
+        </li>
+      </ul>
     </div>
     <div id="menu1" class="tab-pane fade"><br>
-        <ul class="side-menu metismenu">
-                <!-- <li>
+      <ul class="side-menu metismenu">
+        <!-- <li>
                     <a routerLinkActive="active" routerLink="/index"><i class="sidebar-item-icon fa fa-th-large"></i>
                         <span class="nav-label">Dashboard</span>
                     </a>
                 </li> -->
-        
-                <!-- <li class="heading">FEATURES</li> -->
-               
-                <li routerLinkActive="active">
-                    <a href="javascript:;"><i class="sidebar-item-icon fa fa-edit"></i>
-                        <span class="nav-label">Fee Management</span><i class="fa fa-angle-right arrow"></i>
-                    </a>
-                </li>
-                <li routerLinkActive="active">
-                    <a href="javascript:;"><i class="sidebar-item-icon fa fa-bar-chart"></i>
-                        <span class="nav-label">Teacher Activities</span><i class="fa fa-angle-right arrow"></i>
-                    </a>
-                </li>
-                <li routerLinkActive="active">
-                    <a href="javascript:;"><i class="sidebar-item-icon fa fa-map"></i>
-                        <span class="nav-label">Examination Management</span><i class="fa fa-angle-right arrow"></i></a>
-                </li>
-                <li>
-                    <a routerLink="/ui/icons" routerLinkActive="active"><i class="sidebar-item-icon fa fa-smile-o"></i>
-                        <span class="nav-label">User Managements</span>
-                    </a>
-                </li>
-                <li routerLinkActive="active">
-                    <a href="javascript:;"><i class="sidebar-item-icon fa fa-envelope"></i>
-                        <span class="nav-label">Notifications & Events</span><i class="fa fa-angle-right arrow"></i>
-                    </a>
-                </li>
-                <li>
-                    <a routerLink="/calendar" routerLinkActive="active"><i class="sidebar-item-icon fa fa-calendar"></i>
-                        <span class="nav-label">Transport Management</span>
-                    </a>
-                </li>
-                <li routerLinkActive="active">
-                    <a href="javascript:;"><i class="sidebar-item-icon fa fa-file-text"></i>
-                        <span class="nav-label">Finance Management</span><i class="fa fa-angle-right arrow"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript:;"><i class="sidebar-item-icon fa fa-sitemap"></i>
-                        <span class="nav-label">Leave Management</span><i class="fa fa-angle-right arrow"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript:;"><i class="sidebar-item-icon fa fa-sitemap"></i>
-                        <span class="nav-label">Certificates Management</span><i class="fa fa-angle-right arrow"></i>
-                    </a>
-                </li>
-            </ul>
-    </div>
-    </div>
 
-    
+        <!-- <li class="heading">FEATURES</li> -->
+
+        <li routerLinkActive="active">
+          <a href="javascript:;"><i class="sidebar-item-icon fa fa-edit"></i>
+            <span class="nav-label">Fee Management</span><i class="fa fa-angle-right arrow"></i>
+          </a>
+        </li>
+        <li routerLinkActive="active">
+          <a href="javascript:;"><i class="sidebar-item-icon fa fa-bar-chart"></i>
+            <span class="nav-label">Teacher Activities</span><i class="fa fa-angle-right arrow"></i>
+          </a>
+        </li>
+        <li routerLinkActive="active">
+          <a href="javascript:;"><i class="sidebar-item-icon fa fa-map"></i>
+            <span class="nav-label">Examination Management</span><i class="fa fa-angle-right arrow"></i></a>
+        </li>
+        <li>
+          <a routerLink="/ui/icons" routerLinkActive="active"><i class="sidebar-item-icon fa fa-smile-o"></i>
+            <span class="nav-label">User Managements</span>
+          </a>
+        </li>
+        <li routerLinkActive="active">
+          <a href="javascript:;"><i class="sidebar-item-icon fa fa-envelope"></i>
+            <span class="nav-label">Notifications & Events</span><i class="fa fa-angle-right arrow"></i>
+          </a>
+        </li>
+        <li>
+          <a routerLink="/calendar" routerLinkActive="active"><i class="sidebar-item-icon fa fa-calendar"></i>
+            <span class="nav-label">Transport Management</span>
+          </a>
+        </li>
+        <li routerLinkActive="active">
+          <a href="javascript:;"><i class="sidebar-item-icon fa fa-file-text"></i>
+            <span class="nav-label">Finance Management</span><i class="fa fa-angle-right arrow"></i>
+          </a>
+        </li>
+        <li>
+          <a href="javascript:;"><i class="sidebar-item-icon fa fa-sitemap"></i>
+            <span class="nav-label">Leave Management</span><i class="fa fa-angle-right arrow"></i>
+          </a>
+        </li>
+        <li>
+          <a href="javascript:;"><i class="sidebar-item-icon fa fa-sitemap"></i>
+            <span class="nav-label">Certificates Management</span><i class="fa fa-angle-right arrow"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+
 
 </div>
