--- a/src/app/pages/students/view-student/view-student.component.html
+++ b/src/app/pages/students/view-student/view-student.component.html
@@ -29,7 +29,7 @@
                             <h5 class="h5 mb-2">About Me</h5>
                         </div>
                         <div class="col-md-2 text-secondary">
-                            <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                            <i class="fa fa-pencil-square-o" aria-hidden="true" (click)="goToEditStd(stdDetailsData.studentID)"></i>
                             <i class="fa fa-print ml-2" aria-hidden="true"></i>
                             <i class="fa fa-download ml-2" aria-hidden="true"></i>  
                         </div>
