--- a/src/app/pages/students/student-list/student-list.component.html
+++ b/src/app/pages/students/student-list/student-list.component.html
@@ -6,6 +6,7 @@
               <div class="ibox-head">
                 <div class="ibox-title">All Students</div>
                 <div class="ibox-tools">
+                  <input type='text' placeholder='Type Roll' (keyup)='updateFilter($event)'/>
                   <a class="ibox-collapse">
                     <i class="fa fa-refresh mr-1 text-success refresh-icon" aria-hidden="true"></i>
                     <i class="fa fa-times text-danger close-icon" aria-hidden="true"></i>
@@ -16,6 +17,7 @@
             <div class="ibox-body" style="font-size: 11px;">
 
                 <ngx-datatable 
+                #table
                 class="data-table dt-chk fullscreen" 
                 [columnMode]="'force'" 
                 [scrollbarH]="false" 
