section filter done

--- a/src/app/pages/students/student-list/student-list.component.html
+++ b/src/app/pages/students/student-list/student-list.component.html
@@ -6,7 +6,8 @@
               <div class="ibox-head">
                 <div class="ibox-title">All Students</div>
                 <div class="ibox-tools">
-                  <input type='text' placeholder='Type Roll' (keyup)='updateFilter($event)'/>
+                  <input type='text' placeholder='Type Roll' (keyup)='updateRollFilter($event)'/>
+                  <input type='text' placeholder='Type Section' (keyup)='updateSectionFilter($event)'/>
                   <a class="ibox-collapse">
                     <i class="fa fa-refresh mr-1 text-success refresh-icon" aria-hidden="true"></i>
                     <i class="fa fa-times text-danger close-icon" aria-hidden="true"></i>
