arrow added on list page

--- a/src/app/pages/students/student-list/student-list.component.html
+++ b/src/app/pages/students/student-list/student-list.component.html
@@ -10,7 +10,8 @@
                   <input type='text' placeholder='Type Section' (keyup)='updateSectionFilter($event)'/>
                   <a class="ibox-collapse">
                     <i class="fa fa-refresh mr-1 text-success refresh-icon" aria-hidden="true"></i>
-                    <i class="fa fa-times text-danger close-icon" aria-hidden="true"></i>
+                    <!-- <i class="fa fa-times text-danger close-icon" aria-hidden="true"></i> -->
+                    <i class="fa fa-angle-down arrow" aria-hidden="true"></i>
                   </a>
                 </div>
               </div>
